corpus/list_lit.txt
================================================================================
Empty List
================================================================================

()

--------------------------------------------------------------------------------

(source
  (list_lit))

================================================================================
List with Keywords
================================================================================

(:a :b :c)

--------------------------------------------------------------------------------

(source
  (list_lit
    (kwd_lit)
    (kwd_lit)
    (kwd_lit)))

================================================================================
Call with Anonymous Function
================================================================================

(#(+ % 1) 1)

--------------------------------------------------------------------------------

(source
  (list_lit
    (anon_fn_lit
      (sym_lit)
      (sym_lit)
      (num_lit))
    (num_lit)))

================================================================================
Map Lookup
================================================================================

({:a 1} :a)

--------------------------------------------------------------------------------

(source
  (list_lit
    (map_lit
      (kwd_lit)
      (num_lit))
    (kwd_lit)))

================================================================================
Map Lookup Alternate
================================================================================

(:b {:b 2})

--------------------------------------------------------------------------------

(source
  (list_lit
    (kwd_lit)
    (map_lit
      (kwd_lit)
      (num_lit))))

================================================================================
Set Lookup
================================================================================

(#{:c :e} :e)

--------------------------------------------------------------------------------

(source
  (list_lit
    (set_lit
      (kwd_lit)
      (kwd_lit))
    (kwd_lit)))

================================================================================
Call with Symbol with Metadata
================================================================================

(.get ^ByteBuffer b)

--------------------------------------------------------------------------------

(source
  (list_lit
    (sym_lit)
    (meta_lit
      (sym_lit))
    (sym_lit)))
