corpus/meta_lit.txt
================================================================================
Symbol Metadata
================================================================================

^String []

--------------------------------------------------------------------------------

(source
  (meta_lit
    (sym_lit))
  (vec_lit))

================================================================================
Keyword Metadata
================================================================================

^:private {}

--------------------------------------------------------------------------------

(source
  (meta_lit
    (kwd_lit))
  (map_lit))

================================================================================
String Metadata
================================================================================

^"gnarly" {}

--------------------------------------------------------------------------------

(source
  (meta_lit
    (str_lit))
  (map_lit))

================================================================================
Map Metadata
================================================================================

^{:x 0 :y 1} #{}

--------------------------------------------------------------------------------

(source
  (meta_lit
    (map_lit
      (kwd_lit)
      (num_lit)
      (kwd_lit)
      (num_lit)))
  (set_lit))

================================================================================
Reader Conditional Metadata
================================================================================

^#?(:clj "vanilla" :cljr "strawberry" :cljs "chocolate") []

--------------------------------------------------------------------------------

(source
  (meta_lit
    (read_cond_lit
      (kwd_lit)
      (str_lit)
      (kwd_lit)
      (str_lit)
      (kwd_lit)
      (str_lit)))
  (vec_lit))

================================================================================
Multiple Bits of Metadata
================================================================================

^:wake ^:sit ^:sleep #{}

--------------------------------------------------------------------------------

(source
  (meta_lit
    (kwd_lit))
  (meta_lit
    (kwd_lit))
  (meta_lit
    (kwd_lit))
  (set_lit))

================================================================================
Deprecated Metadata
================================================================================

#^:wake #^"sit" #^String #^{:w :x :y :z} #{}

--------------------------------------------------------------------------------

(source
  (meta_lit
    (kwd_lit))
  (meta_lit
    (str_lit))
  (meta_lit
    (sym_lit))
  (meta_lit
    (map_lit
      (kwd_lit)
      (kwd_lit)
      (kwd_lit)
      (kwd_lit)))
  (set_lit))
