corpus/meta_marker.txt
================================================================================
Symbol Metadata
================================================================================

^String []

--------------------------------------------------------------------------------

(source
  (meta_marker)
  (sym_lit)
  (vec_lit))

================================================================================
Keyword Metadata
================================================================================

^:private {}

--------------------------------------------------------------------------------

(source
  (meta_marker)
  (kwd_lit)
  (map_lit))

================================================================================
String Metadata
================================================================================

^"gnarly" {}

--------------------------------------------------------------------------------

(source
  (meta_marker)
  (str_lit)
  (map_lit))

================================================================================
Map Metadata
================================================================================

^{:x 0 :y 1} #{}

--------------------------------------------------------------------------------

(source
  (meta_marker)
  (map_lit
    (kwd_lit)
    (num_lit)
    (kwd_lit)
    (num_lit))
  (set_lit))

================================================================================
Reader Conditional Metadata
================================================================================

^#?(:clj "vanilla" :cljr "strawberry" :cljs "chocolate") []

--------------------------------------------------------------------------------

(source
  (meta_marker)
  (read_cond_lit
    (kwd_lit)
    (str_lit)
    (kwd_lit)
    (str_lit)
    (kwd_lit)
    (str_lit))
  (vec_lit))

================================================================================
Multiple Bits of Metadata
================================================================================

^:wake ^:sit ^:sleep #{}

--------------------------------------------------------------------------------

(source
  (meta_marker)
  (kwd_lit)
  (meta_marker)
  (kwd_lit)
  (meta_marker)
  (kwd_lit)
  (set_lit))

================================================================================
Deprecated Metadata
================================================================================

#^:wake #^"sit" #^String #^{:w :x :y :z} #{}

--------------------------------------------------------------------------------

(source
  (old_meta_marker)
  (kwd_lit)
  (old_meta_marker)
  (str_lit)
  (old_meta_marker)
  (sym_lit)
  (old_meta_marker)
  (map_lit
    (kwd_lit)
    (kwd_lit)
    (kwd_lit)
    (kwd_lit))
  (set_lit))
