test/corpus/ns_map_lit.txt
================================================================================
Simple Namespace Map
================================================================================

#:prefix{:a 1 :b 2}

--------------------------------------------------------------------------------

(source
  (ns_map_lit
    (kwd_lit
      (kwd_name))
    (kwd_lit
      (kwd_name))
    (num_lit)
    (kwd_lit
      (kwd_name))
    (num_lit)))

================================================================================
Nested Namespace Maps
================================================================================

#:outer{:first "Terence"
        :last "Tao"
        :area #:inner{:name "Mathematics"}}

--------------------------------------------------------------------------------

(source
  (ns_map_lit
    (kwd_lit
      (kwd_name))
    (kwd_lit
      (kwd_name))
    (str_lit)
    (kwd_lit
      (kwd_name))
    (str_lit)
    (kwd_lit
      (kwd_name))
    (ns_map_lit
      (kwd_lit
        (kwd_name))
      (kwd_lit
        (kwd_name))
      (str_lit))))

================================================================================
Autoresolving Namespace Map
================================================================================

#::{}

--------------------------------------------------------------------------------

(source
  (ns_map_lit
    (auto_res_mark)))

================================================================================
Namespace Map that Autoresolves with Alias
================================================================================

#::s{:x 1 :y 2}

--------------------------------------------------------------------------------

(source
  (ns_map_lit
    (kwd_lit
      (kwd_name))
    (kwd_lit
      (kwd_name))
    (num_lit)
    (kwd_lit
      (kwd_name))
    (num_lit)))
