test/corpus/set_lit.txt
================================================================================
Empty Set
================================================================================

#{}

--------------------------------------------------------------------------------

(source
  (set_lit))

================================================================================
Simple Set
================================================================================

#{:i :j :k}

--------------------------------------------------------------------------------

(source
  (set_lit
    (kwd_lit
      (kwd_name))
    (kwd_lit
      (kwd_name))
    (kwd_lit
      (kwd_name))))

================================================================================
Nested Sets
================================================================================

#{#{1} #{#{0} 2}}

--------------------------------------------------------------------------------

(source
  (set_lit
    (set_lit
      (num_lit))
    (set_lit
      (set_lit
        (num_lit))
      (num_lit))))
