test/corpus/sym_lit.txt
================================================================================
Simple Symbol
================================================================================

def

--------------------------------------------------------------------------------

(source
  (sym_lit
    (sym_name)))

================================================================================
Symbol with Prefix
================================================================================

clojure.string/blank?

--------------------------------------------------------------------------------

(source
  (sym_lit
    (sym_ns)
    (sym_name)))
